pkg/ibmvpc/examples/out/analysis_out/expected/tgw_basic_example_combined-vpc-local-tg-kysubnetsBased_withPGW.txt
Connectivity between VPCs connected by TGW local-tg-ky (UID: crn:161)
combined connections between subnets:
ky-vpc1-net1 => ky-vpc2-net1 : All Connections
ky-vpc2-net1 => ky-vpc1-net1 : All Connections
