pkg/ibmvpc/examples/out/analysis_out/expected/tgw_larger_example_test-vpc1-kysubnetsBased_withPGW.txt
Connectivity for VPC test-vpc1-ky
combined connections between subnets:
subnet11-ky => subnet12-ky : All Connections
subnet12-ky => subnet11-ky : All Connections
